# cpp-technical-evaluation

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  readme_solution.md
docker/: docker-compose.yml
docker/stream-producer/: producer.sh
docker/stream-server/: Dockerfile
src/: CMakeLists.txt  main.cpp
src/motion_detector/include/: motion_detector.hpp
tests/: CmakeLists.txt
video/: dummy.txt
